# jama

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
c/: autotest  develop
jama/: change.py  cli.py
jama2/: change.py  test_change.py
tests/: conftest.py  test_change.py
