[tool.poetry]
name = "jama"
version = "0.1.0"
description = "Change based merge for git."
homepage = "https://github.com/ganwell/jama"
repository = "https://github.com/ganwell/jama"
authors = ["Jean-Louis Fuchs"]
license = "AGPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = ">=3.7 <4.0"
pyrsistent = "^0.17.3"
attrs = "^20.3.0"
click = "^7.1.2"
pygit2 = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pdbpp = "^0.10.2"
isort = "^5.7.0"
flake8 = "^3.8.4"
flake8-bugbear = "^21.3.2"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"
python-language-server = "^0.36.2"
hypothesis = "^6.6.1"
mypy = "^0.812"
keyring = "^23.0.0"
SecretStorage = "^3.3.1"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

# No flake8 pyproject support yet, please edit .flake8

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

