[metadata]
name = jama
version = 0.1
description = Change based merge for git.
long_description = file: README.md
url = https://github.com/ganwell/jama
author = Jean-Louis Fuchs
license = AGPL-3.0-or-later
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
install_requires =
    click
    pygit2

[options.extras_require]
dev =
    black==20.8b1
    pytest
    pdbpp
    isort
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-docstrings
    flake8-isort
    flake8-string-format
    flake8-tuple
    python-language-server
    hypothesis
    mypy

[options.entry_points]
console_scripts =
  git-chage-merge = jama.cli:run


[flake8]
ignore =
    # line too long (managed by black)
    E501,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
max-line-length = 88
max-complexity = 10
doctests = True

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
